* doc-string updates
* small bug fixes in matplotlib import code
* make python code to conform to PEP8

v1.1.0-beta, 2014-09-16

* new 1D Gridder working consistent with 2D and 3D
* add easy Powder Diffraction cif file parser
* addition of several test routines to improve the code quality
* new mathematical functions in math subpackage
* fixes for possible segfault in the Gridder classes
* considerable reduce size of elements.db file
* FastScan parser for spec-mesh scans and FastScan/kmap data from ESRF 
  (thanks to RG for help with testing and implementation ideas)
* code-cleanup
* minimal bug-fixes in io (xrdml)
* documentation updates
* add environment function to Materials: function calculates the atomic
  neighbors around a given position in the unit cell
* documentation update regarding the Q2Ang and Q2AngFit functions
* fixed inconsistency bug in NonCOP and HXRD's Q2Ang function (thanks to FZ)
* SPEC-file parser improvements 
* python3.X compatibilty in single code-base

v1.0.6, 2014-04-15

* new way of accessing spec-scans when parsing the spec file
  new: spec scans can be directly accessed with there spec-scan-number
* sequential gridding: usage improvements
* sample displacement error consideration in qconversion (experimental)
* new Q2AngFit function able to fit the goniometer angles or a q-vector
* minor fixes in the CIF file parser
* add workaround for internal coordinate system definition in the experiment 
  class
* new getxrdml_scan function to read (multiple) XRDML-files 
* fixes for the getxrdml_map function
* add packaging instructions for WIN64

v1.0.5, 2014-02-09

* Documentation updates
* minor compiler warning fixes and small bug fixes (line cut routines, 
  EDF file reading)
* more flexible shape of data arrays for Ang2Q function
* minor improvements of the spec-file parser
* added KeepData option to Gridders in 1,2,3 dimensions (sequential gridding)
* implement possibility to read gzipped, bzipped data files 