@@ -1,3 +1,4 @@
+* more flexibility in sample position definition
 * doc-string updates
 * small bug fixes in matplotlib import code
 * make python code to conform to PEP8
